site: Fix global image borders bleeding into the inline code header badges

--- a/css/style.css
+++ b/css/style.css
@@ -714,6 +714,8 @@ ol {
     width: 16px;
     height: 16px;
     color: var(--text-secondary);
+    border: none;
+    margin: 0;
 }
 
 .code-body {
